@@ -74,8 +74,10 @@ Construct a new L<Mojo::Reactor::UV> object.
 =head2 again
 
   $reactor->again($id);
+  $reactor->again($id, 0.5);
 
-Restart timer. Note that this method requires an active timer.
+Restart timer and optionally change the invocation time. Note that this method
+requires an active timer.
 
 =head2 io
 
@@ -151,9 +153,10 @@ this method requires an active I/O watcher.
 =head1 CAVEATS
 
 When using L<Mojo::IOLoop> with L<UV>, the event loop must be controlled by
-L<Mojo::IOLoop> or L<Mojo::Reactor::UV>, such as with the methods L<Mojo::IOLoop/start>,
-L<Mojo::IOLoop/stop>, and L</"one_tick">. Starting or stopping the event loop through
-L<UV> will not provide required functionality to L<Mojo::IOLoop> applications.
+L<Mojo::IOLoop> or L<Mojo::Reactor::UV>, such as with the methods
+L<Mojo::IOLoop/"start">, L<Mojo::IOLoop/"stop">, and L</"one_tick">. Starting
+or stopping the event loop through L<UV> will not provide required
+functionality to L<Mojo::IOLoop> applications.
 
 Care should be taken that file descriptors are not closed while being watched
 by the reactor. They can be safely closed after calling L</"watch"> with
