@@ -1,4 +1,6 @@
 {{$NEXT}}
+  - Support changing invocation time of active timers in again method, to
+    support keep_alive_timeout added in Mojolicious 8.37
 
 1.001     2018-04-21 20:19:51 EDT
   - Stable release using UV 1.0
